Use toList() instead of Collectors.toList()